--- a/Moduo1/EmployeeCommon/EmployeeCommon.csproj
+++ b/Moduo1/EmployeeCommon/EmployeeCommon.csproj
@@ -48,7 +48,7 @@
     <Compile Include="IEmployeeServiceCallback.cs" />
     <Compile Include="Notification.cs" />
     <Compile Include="NotificationType.cs" />
-    <Compile Include="Projekat.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserStory.cs" />
   </ItemGroup>
