--- a/Moduo2/ClientCommonTest/ClientCommonTest.csproj
+++ b/Moduo2/ClientCommonTest/ClientCommonTest.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTest\EmployeeTest.cs" />
+    <Compile Include="DataTest\HiringCompanyTest.cs" />
+    <Compile Include="DataTest\TeamTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
