--- a/Moduo2/Client/Client.csproj
+++ b/Moduo2/Client/Client.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Views\CEOWork.xaml.cs">
       <DependentUpon>CEOWork.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Notifications\Accept.xaml.cs">
+      <DependentUpon>Accept.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -76,6 +79,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\CEOWork.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Notifications\Accept.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
