--- a/Moduo2/ClientCommon/ClientCommon.csproj
+++ b/Moduo2/ClientCommon/ClientCommon.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Data\Employee.cs" />
     <Compile Include="Data\EmployeeType.cs" />
     <Compile Include="Data\HiringCompany.cs" />
+    <Compile Include="Data\Notification.cs" />
+    <Compile Include="Data\NotificationType.cs" />
+    <Compile Include="Data\NotificationStatus.cs" />
     <Compile Include="Data\Team.cs" />
     <Compile Include="ICallbackMethods.cs" />
     <Compile Include="IEmployeeService.cs" />
