--- a/Common/ICommon/ICommon.csproj
+++ b/Common/ICommon/ICommon.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IEppService.cs" />
+    <Compile Include="IEppServiceCallback.cs" />
+    <Compile Include="ProjectCommon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserStoryCommon.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
