--- a/Moduo1/HiringCompany/App.config
+++ b/Moduo1/HiringCompany/App.config
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
@@ -26,4 +27,28 @@
     <!-- VS2015: -->
     <!--connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ServiceDB.mdf;Integrated Security=True"-->
   </connectionStrings>
+
+<appSettings>
+    <add key="webpages:Version" value="2.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="PreserveLoginUrl" value="true" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />   
+    <add key="smtpServer" value="smtp.gmail.com" />
+    <add key="EnableSsl" value = "true"/>
+    <add key="smtpPort" value="587" />
+    <add key="smtpUser" value="sender@gmail.com" />
+    <add key="smtpPass" value="mypassword" />
+    <add key="adminEmail" value="sender@gmail.com" />
+  </appSettings>
+  <system.net>
+    <mailSettings>
+      <smtp from="sender@gmail.com">
+        <network host="smtp.gmail.com" password="mypassword" port="587" userName="sender@gmail.com"  enableSsl="true"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
+
 </configuration>
+
+
