Moduo1-Dorada metoda za odobravanje projekta

--- a/Moduo1/EmployeeCommon/EmployeeCommon.csproj
+++ b/Moduo1/EmployeeCommon/EmployeeCommon.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Data\EmployeeType.cs" />
     <Compile Include="IEmployeeService.cs" />
     <Compile Include="IEmployeeServiceCallback.cs" />
-    <Compile Include="Data\Notification.cs" />
+    <Compile Include="Notification.cs" />
     <Compile Include="Data\NotificationType.cs" />
     <Compile Include="Data\PartnerCompany.cs" />
     <Compile Include="Data\Project.cs" />
