--- a/Moduo2/Server/App.config
+++ b/Moduo2/Server/App.config
@@ -26,4 +26,27 @@
     <!-- VS2015: -->
     <!--connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CalculatorDB.mdf;Integrated Security=True"-->
   </connectionStrings>
+
+  <!--Send mail-->
+  <appSettings>
+    <add key="webpages:Version" value="2.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="PreserveLoginUrl" value="true" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="smtpServer" value="smtp.gmail.com" />
+    <add key="EnableSsl" value = "true"/>
+    <add key="smtpPort" value="587" />
+    <add key="smtpUser" value="sender@gmail.com" />
+    <add key="smtpPass" value="mypassword" />
+    <add key="adminEmail" value="sender@gmail.com" />
+  </appSettings>
+  <system.net>
+    <mailSettings>
+      <smtp from="sender@gmail.com">
+        <network host="smtp.gmail.com" password="mypassword" port="587" userName="sender@gmail.com"  enableSsl="true"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
+  
 </configuration>
