--- a/Common/ICommon/ICommon.csproj
+++ b/Common/ICommon/ICommon.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IEppService.cs" />
-    <Compile Include="IEppServiceCallback.cs" />
+    <Compile Include="IOutsourcingService.cs" />
+    <Compile Include="IOutsourcingServiceCallback.cs" />
     <Compile Include="ProjectCommon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserStoryCommon.cs" />
