--- a/Moduo2/ClientCommon/ClientCommon.csproj
+++ b/Moduo2/ClientCommon/ClientCommon.csproj
@@ -49,8 +49,9 @@
     <Compile Include="Data\EmployeeType.cs" />
     <Compile Include="Data\HiringCompany.cs" />
     <Compile Include="Data\Notification.cs" />
+    <Compile Include="Data\NotificationNewStatus.cs" />
     <Compile Include="Data\NotificationType.cs" />
-    <Compile Include="Data\NotificationStatus.cs" />
+    <Compile Include="Data\NotificationAcceptStatus.cs" />
     <Compile Include="Data\ProgressStatus.cs" />
     <Compile Include="Data\Project.cs" />
     <Compile Include="Data\AssignStatus.cs" />
