--- a/Moduo2/Server/App.config
+++ b/Moduo2/Server/App.config
@@ -20,7 +20,9 @@
 
   <!--Access to DB-->
   <connectionStrings>
-    <add name="EmployeeServiceDB" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\CalculatorDB.mdf;Integrated Security=True;"/>
+    <add name="EmployeeServiceDB" 
+         providerName="System.Data.SqlClient" 
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\EmployeeServiceDB.mdf;Integrated Security=True"/>
     <!-- VS2013: -->
     <!-- connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\CalculatorDB.mdf;Integrated Security=True;"-->
     <!-- VS2015: -->
