--- a/Moduo2/Server/Server.csproj
+++ b/Moduo2/Server/Server.csproj
@@ -60,6 +60,10 @@
     <Reference Include="ICommon">
       <HintPath>..\..\Common\ICommon\bin\Debug\ICommon.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=2.0.7.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -78,6 +82,7 @@
     <Compile Include="Access\IEmployeeServiceDatabase.cs" />
     <Compile Include="Database\InternalDatabase.cs" />
     <Compile Include="EmployeeService.cs" />
+    <Compile Include="Logger\LogHelper.cs" />
     <Compile Include="OutsourcingService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
