--- a/Moduo1/HiringCompany/HiringCompany.csproj
+++ b/Moduo1/HiringCompany/HiringCompany.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Settings.StyleCop" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
