--- a/Moduo2/Client/Client.csproj
+++ b/Moduo2/Client/Client.csproj
@@ -72,6 +72,9 @@
     <Compile Include="Views\Notifications\AcceptDecline.xaml.cs">
       <DependentUpon>AcceptDecline.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Notifications\MessageBoxCustom.xaml.cs">
+      <DependentUpon>MessageBoxCustom.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -100,6 +103,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Notifications\AcceptDecline.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Notifications\MessageBoxCustom.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
