--- a/Moduo1/HiringCompany/HiringCompany.csproj
+++ b/Moduo1/HiringCompany/HiringCompany.csproj
@@ -54,6 +54,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -71,6 +74,7 @@
     <Compile Include="DatabaseAccess\AccessDB.cs" />
     <Compile Include="DatabaseAccess\DBConfiguration.cs" />
     <Compile Include="DatabaseAccess\HiringCompanyDB.cs" />
+    <Compile Include="Logger\LogHelper.cs" />
     <Compile Include="OutsorcingCompProxy.cs">
       <SubType>Code</SubType>
     </Compile>
