--- a/Moduo1/HiringCompany/App.config
+++ b/Moduo1/HiringCompany/App.config
@@ -4,7 +4,25 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectonHandler, log4net"/>
   </configSections>
+
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="~..\..\..\..\..\Logs\LogFile.txt" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %level - %message%newline%exception" />
+      </layout>
+    </appender>
+
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="FileAppender" />
+    </root>
+  </log4net>
+  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
