--- a/Common/ICommon/ICommon.csproj
+++ b/Common/ICommon/ICommon.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IOutsourcingService.cs" />
-    <Compile Include="IOutsourcingServiceCallback.cs" />
+    <Compile Include="IHiringService.cs" />
     <Compile Include="ProjectCommon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserStoryCommon.cs" />
