--- a/Moduo1/HiringCompany/HiringCompany.csproj
+++ b/Moduo1/HiringCompany/HiringCompany.csproj
@@ -75,13 +75,14 @@
     <Compile Include="DatabaseAccess\DBConfiguration.cs" />
     <Compile Include="DatabaseAccess\HiringCompanyDB.cs" />
     <Compile Include="Logger\LogHelper.cs" />
+    <Compile Include="Notifier.cs" />
     <Compile Include="OutsorcingCompProxy.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="OutsorcingServiceCallback.cs" />
     <Compile Include="Services\EmployeeService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HiringService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
