--- a/Moduo1/HiringCompany/App.config
+++ b/Moduo1/HiringCompany/App.config
@@ -39,7 +39,7 @@
 
   <connectionStrings>
     <add name="hiringCompanyDB" providerName="System.Data.SqlClient"
-        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ServiceDB.mdf;Integrated Security=True"/>
+        connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ServiceDB.mdf;Integrated Security=True;"/>
     <!-- VS2013: -->
     <!--connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ServiceDB.mdf;Integrated Security=True;"-->
     <!-- VS2015: -->
