--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,4 @@ Moduo2/Server/App.config
 Moduo2/Server/App.config
 Moduo2/Logs/LogFile.txt
 Moduo2/Logs/LogFile.txt
+Moduo2/Server/Access/EmployeeServiceDatabase.cs
