--- a/Moduo2/Server/App.config
+++ b/Moduo2/Server/App.config
@@ -43,7 +43,7 @@
   <connectionStrings>
     <add name="EmployeeServiceDB" 
          providerName="System.Data.SqlClient" 
-         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\EmployeeServiceDB.mdf;Integrated Security=True"/>
+         connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\EmployeeServiceDB.mdf;Integrated Security=True"/>
     <!-- VS2013: -->
     <!-- connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\CalculatorDB.mdf;Integrated Security=True;"-->
     <!-- VS2015: -->
