--- a/.gitignore
+++ b/.gitignore
@@ -249,3 +249,4 @@ Moduo2/Server/Access/EmployeeServiceDatabase.cs
 Moduo2/Logs/LogFile.txt
 Moduo2/Server/App.config
 Moduo2/Logs/LogFile.txt
+Moduo2/Server/App.config
