--- a/Moduo2/ClientCommon/ClientCommon.csproj
+++ b/Moduo2/ClientCommon/ClientCommon.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ICallbackMethods.cs" />
     <Compile Include="IEmployeeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TempStructure\TaskAndUserStoryCompletedFlag.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
