--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,5 @@ Moduo2/Logs/LogFile.txt
 Moduo2/Server/App.config
 Moduo2/Logs/LogFile.txt
 Moduo2/Server/App.config
+Moduo2/Logs/LogFile.txt
+Moduo2/Client/App.config
