--- a/Moduo2/BDD/BDD.csproj
+++ b/Moduo2/BDD/BDD.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3465285-1CB3-4F28-B7F0-2A51F2D8EA63}</ProjectGuid>
+    <ProjectGuid>{64A3C69F-FEED-46A5-8A14-3058CADDAAC8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClientCommonTest</RootNamespace>
-    <AssemblyName>ClientCommonTest</AssemblyName>
+    <RootNamespace>BDD</RootNamespace>
+    <AssemblyName>BDD</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,36 +30,56 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TechTalk.SpecFlow">
+      <HintPath>..\packages\SpecFlow.2.1.0\lib\net45\TechTalk.SpecFlow.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataTest\EmployeeTest.cs" />
-    <Compile Include="DataTest\HiringCompanyTest.cs" />
-    <Compile Include="DataTest\NotificationTest.cs" />
-    <Compile Include="DataTest\ProjectTest.cs" />
-    <Compile Include="DataTest\TaskTest.cs" />
-    <Compile Include="DataTest\TeamTest.cs" />
-    <Compile Include="DataTest\UserStoryTest.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="RequestsFromModule1Steps.cs" />
+    <Compile Include="RequestsFromModule1.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RequestsFromModule1.feature</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeamProjectAssign.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TeamProjectAssign.feature</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="RequestsFromModule1.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>RequestsFromModule1.feature.cs</LastGenOutput>
+    </None>
     <None Include="packages.config" />
+    <None Include="TeamProjectAssign.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>TeamProjectAssign.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClientCommon\ClientCommon.csproj">
-      <Project>{AD2FD604-5F1E-491E-BF1A-E036AE1288F5}</Project>
+      <Project>{ad2fd604-5f1e-491e-bf1a-e036ae1288f5}</Project>
       <Name>ClientCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Client\Client.csproj">
+      <Project>{523efbea-1078-42e9-88c1-a0be6fd49ccf}</Project>
+      <Name>Client</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
