--- a/Moduo1/HiringCompanyTest/HiringCompanyTest.csproj
+++ b/Moduo1/HiringCompanyTest/HiringCompanyTest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F52C7068-8A38-4D65-A13C-4FF1453F6B83}</ProjectGuid>
+    <ProjectGuid>{914D4D66-6C52-4D3B-B79B-30A7E37E4C33}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EmployeeCommon</RootNamespace>
-    <AssemblyName>EmployeeCommon</AssemblyName>
+    <RootNamespace>HiringCompanyTest</RootNamespace>
+    <AssemblyName>HiringCompanyTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,11 +31,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NSubstitute, Version=1.10.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\NSubstitute.1.10.0.0\lib\net45\NSubstitute.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=3.6.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.6.0\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,19 +58,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\CurrentData.cs" />
-    <Compile Include="Data\Employee.cs" />
-    <Compile Include="Data\EmployeeType.cs" />
-    <Compile Include="Data\Notification.cs" />
-    <Compile Include="IEmployeeService.cs" />
-    <Compile Include="IEmployeeServiceCallback.cs" />
-    <Compile Include="Data\PartnerCompany.cs" />
-    <Compile Include="Data\Project.cs" />
+    <Compile Include="DatabaseAccessTest\AccessDBTest.cs" />
+    <Compile Include="DatabaseAccessTest\HiringCompanyDBTest.cs" />
+    <Compile Include="DatabaseAccessTest\InternalDatabaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data\UserStory.cs" />
+    <Compile Include="Services\EmployeeServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeeCommon\EmployeeCommon.csproj">
+      <Project>{f52c7068-8a38-4d65-a13c-4ff1453f6b83}</Project>
+      <Name>EmployeeCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HiringCompany\HiringCompany.csproj">
+      <Project>{47576da7-9609-4044-be29-a09c8465e9c5}</Project>
+      <Name>HiringCompany</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
