--- a/Moduo2/ServerTest/ServerTest.csproj
+++ b/Moduo2/ServerTest/ServerTest.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Access\EmployeeServiceDatabaseTest.cs" />
     <Compile Include="Database\InternalDatabaseTest.cs" />
     <Compile Include="EmployeeServiceTest.cs" />
+    <Compile Include="OutsourcingServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
