--- a/Moduo1/Client/Client.csproj
+++ b/Moduo1/Client/Client.csproj
@@ -121,6 +121,9 @@
     <Resource Include="Images\settings-icon-9.png" />
     <Resource Include="Images\settings-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="readme.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
